# python-qlient-core

./: .gitignore  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  github-actions-pytest.yml  publish.yml  pytest.yml
docs/: examples.md  index.md  installation.md  introduction.md
docs/examples/: fields_addition_operator.py  fields_field_and_directives.py  strawberry_schema_example.py  swapi_query_all_films_with_selection.graphql  swapi_query_all_films_with_selection.py  swapi_query_film_by_id.py
docs/usage/: backend.md  fields.md  plugins.md  proxies.md
site/: 404.html  index.html  sitemap.xml
site/examples/: create_request.py  fields.py  index.html  proxies.py  strawberry_schema_example.py  swapi_query_film_by_id.graphql
site/installation/: index.html
site/introduction/: index.html
site/search/: search_index.json
tests/: conftest.py  test_backends_backend.py  test_backends_backend_async.py  test_builder.py  test_builder_gql_query_builder.py  test_clients.py  test_clients_async_client.py  test_clients_async_client_sync_backend.py  test_clients_client.py  test_internals.py  test_models.py  test_models_directive.py  test_models_field.py  test_models_fields.py  test_models_request_response.py  test_plugins.py  test_proxies.py  test_schema_parser.py  test_schema_providers.py  test_schema_schema.py  test_settings.py  test_swapi.py
tests/schema/: test_schema_loader.py  test_schema_parser.py  test_schema_providers.py  test_schema_schema.py  test_schema_types.py
tests/schema_files/: dex_schema.json  github_schema.json  (+2 more)
(+22 files in other folders)
