[tool.poetry]
name = "qlient-core"
version = "0.1.1-beta"
description = "The core for a blazingly fast and modern graphql client designed with simplicity in mind."
authors = ["Daniel Seifert <info@danielseifert.ch>"]
maintainers = ["Daniel Seifert <info@danielseifert.ch>"]
readme = "README.md"
homepage = "https://qlient-org.github.io/python-qlient/"
repository = "https://github.com/qlient-org/python-qlient"
documentation = "https://qlient-org.github.io/python-qlient/"
keywords = ["graphql", "client", "api", "query", "mutation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
    { include = "qlient", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = "^4.11.4"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
coverage = "^6.4.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
black = "^22.3.0"
strawberry-graphql = "^0.115.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
